--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ujjavaldesai.github.io",
+  "homepage": "http://ujjavaldesai.github.io/",
   "name": "personal-website",
   "version": "1.1.0",
   "private": true,
