--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "CI= react-scripts start",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
