--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,9 @@
 # dependencies
 /node_modules
 /.pnp
-.idea/*
+.idea
 .pnp.js
 package-lock.json
-yarn.lock
-.idea/workspace.xml
 
 # testing
 /coverage
