--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "~1.2.26",
-    "@fortawesome/free-brands-svg-icons": "~5.12.0",
-    "@fortawesome/free-solid-svg-icons": "~5.12.0",
-    "@fortawesome/react-fontawesome": "~0.1.8",
-    "bootstrap": "~4.4.1",
-    "materialize-css": "~1.0.0-rc.2",
-    "react": "~17.0.1",
-    "react-app-polyfill": "~2.0.0",
-    "react-dom": "~17.0.1",
-    "react-player": "~2.6.2",
-    "react-router-dom": "~5.1.2",
-    "react-scripts": "~4.0.2"
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "bootstrap": "^4.4.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "latest",
+    "react-app-polyfill": "^2.0.0",
+    "react-dom": "latest",
+    "react-player": "^2.6.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "CI= react-scripts start",
