--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.3.7",
     "materialize-css": "^1.0.0-rc.2",
     "react": "latest",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "latest",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "latest"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "CI= react-scripts start",
