--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^5.3.7",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "latest",
+    "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
-    "react-dom": "latest",
+    "react-dom": "^17.0.2",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1"
